Changes for 1.4.2:

 - added new templates: Template_Cisco_PIX_525,
   Template_Dell_PowerConnect_6248, Template_APC_Battery,
   Template_HP_InsightManager, Template_Dell_OpenManage, Template_Cisco_PIX,
   Template_Dell_PowerEdge (Alexei)
 - improved per cpu 'system.cpu.util[]' for linux/solaris (Eugene)
 - added support of 'system.cpu.num' (Eugene)
 - added automatic resolution of DNS names for auto-discovery (Alexei)
 - fixed processing of triggers on delta items. Thanks to Palmertree. (Alexei)
 - updated German translation. Thanks to Beam. (Alexei)
 - changed help string for parameter '-s' of zabbix_sender (Alexei)
 - fixed displaying of text data (EOL) in screens (Alexei)
 - added missing { and } when displaying trigger expressions (Alexei)
 - fixed processing of negative SNMP integers (Alexei)
 - fixed processing of MM in format of log timestamps (Alexei)
 - added missing index on items_applications.itemid (Alexei)
 - fixed processing of SNMP octet strings (Alexei)
 - fixed division by zero in ZABBIX server (Alexei)
 - support of parameters NodeNoEvents and NodeNoHistory (Alexei)
 - developed data monitoring of multiple nodes (Eugene)
 - support of new parameter for count(period,value,operator) (Alexei)
 - new trigger function iregexp(), non case-sensitive regexp (Alexei) 
 - fixed upgrade script to correctly process host-template linkage (Alexei)
 - fixed synchronisation of delete operation between nodes (Alexei)
 - fixed problem with libresolv under Solaris 8 (Alexei)
 - improved SMS sender (Eugene)
 - improved item and trigger filtering (Eugene)
 - added dotted drowing type for links of map (Eugene)
 - fixed links drowing type of map (Eugene)
 - fixed items,graphs,hostgroups deletion (Eugene)
 - fixed permisions for maps (Eugene)
 - fixed filtering of items by status (Eugene)
 - fixed collector for WinXX (Eugene)
 - fixed definition of serial columns to allow use of older MySQL (Alexei)
 - decreased required version of libcurl (Eugene)