@@ -755,7 +755,10 @@ void	process_actions(DB_EVENT *event)
 		(event->source == EVENT_SOURCE_TRIGGERS)?"TRIGGERS":"DISCOVERY",
 		event->eventid);
 
-	if(TRIGGER_VALUE_TRUE == event->value)
+/*      Do not react on any events if we depend on other trigger */
+/*	if(TRIGGER_VALUE_TRUE == event->value)*/
+/*	For events generated by triggers only */
+	if(event->source == EVENT_SOURCE_TRIGGERS)
 	{
 		zabbix_log( LOG_LEVEL_DEBUG, "Check dependencies");
 
